--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.lahm.dailytask.MainActivity">
+    android:orientation="vertical"
+    tools:context="com.example.lahm.myapplication.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+    <Button
+        android:id="@+id/thread_btn"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:text="thread" />
+
+    <Button
+        android:id="@+id/file_btn"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:text="file" />
+
+    <Button
+        android:id="@+id/reflection_btn"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:text="reflection" />
+
+    <Button
+        android:id="@+id/replace_btn"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:text="replace" />
+
+</LinearLayout>
