--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,5 +58,11 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:text="lifeCircle" />
+
+        <Button
+            android:id="@+id/handler_btn"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:text="handler" />
     </LinearLayout>
 </ScrollView>
