--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,5 +70,11 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:text="web" />
+
+        <Button
+            android:id="@+id/ndk_btn"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:text="ndk" />
     </LinearLayout>
 </ScrollView>
