--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,12 @@
             android:textColor="#000" />
 
         <Button
+            android:id="@+id/recycler_btn"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:text="recycler" />
+
+        <Button
             android:id="@+id/thread_btn"
             android:layout_width="match_parent"
             android:layout_height="60dp"
