--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -2,18 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000"
     android:orientation="vertical">
 
+
+    <!--<ImageView-->
+    <!--android:id="@+id/iv"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent" />-->
+    <!---->
+
+
     <TextView
-        android:id="@+id/tv"
+        android:id="@id/textView"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/xml_resource"
-        android:text="sssss" />
-
-    <ImageView
-        android:id="@+id/iv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+        android:layout_height="187dp"
+        android:drawableLeft="@mipmap/rabbit"
+        android:drawableStart="@mipmap/rabbit"
+        android:gravity="center_vertical"
+        android:text="ceshi"
+        android:textColor="#fff" />
 </LinearLayout>
