--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -14,7 +14,7 @@
 
 
     <TextView
-        android:id="@id/textView"
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="187dp"
         android:drawableLeft="@mipmap/rabbit"
