--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -104,5 +104,12 @@
             android:id="@+id/daemon_btn"
             android:layout_width="match_parent"
             android:layout_height="60dp" />
+
+        <Button
+            android:id="@+id/net_speed"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:text="test_net_speed" />
+
     </LinearLayout>
 </ScrollView>
