插件化入门

--- a/app/src/main/res/layout/activity_hook.xml
+++ b/app/src/main/res/layout/activity_hook.xml
@@ -5,4 +5,9 @@
     android:background="#fcc"
     android:orientation="vertical">
 
+    <Button
+        android:id="@+id/jump"
+        android:layout_width="200dp"
+        android:layout_height="80dp"
+        android:text="jump" />
 </LinearLayout>
